--- a/testing-ex-12/pom.xml
+++ b/testing-ex-12/pom.xml
@@ -54,9 +54,9 @@
       <version>${httpclient.version}</version>
     </dependency>
     <dependency>
-       <groupId>log4j</groupId>
-       <artifactId>log4j</artifactId>
-       <version>1.2.27</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.15.0</version>
     </dependency>
     <dependency>
       <groupId>org.mybatis</groupId>
